modules/foundation/vpc/subnets.tf
####################################################
# Public Subnets
####################################################

resource "aws_subnet" "public" {

  for_each = var.public_subnets

  vpc_id = aws_vpc.main.id

  cidr_block = each.value.cidr

  availability_zone = each.value.az

  map_public_ip_on_launch = true

  tags = merge(

    local.common_tags,

    {

      Name = "${local.name_prefix}-${each.key}"

      Type = "Public"

    }

  )

}
####################################################
# Private Subnets
####################################################

resource "aws_subnet" "private" {

  for_each = var.private_subnets

  vpc_id = aws_vpc.main.id

  cidr_block = each.value.cidr

  availability_zone = each.value.az

  tags = merge(

    local.common_tags,

    {

      Name = "${local.name_prefix}-${each.key}"

      Type = "Private"

    }

  )

}
