modules/foundation/vpc/route_tables.tf
####################################################
# Public Route Table
####################################################

resource "aws_route_table" "public" {

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.igw.id

  }

  tags = merge(

    local.common_tags,

    {

      Name = "${local.name_prefix}-public-rt"

    }

  )

}
####################################################
# Public Route Table Association
####################################################

resource "aws_route_table_association" "public" {

  for_each = aws_subnet.public

  subnet_id = each.value.id

  route_table_id = aws_route_table.public.id

}
####################################################
# Private Route Tables
####################################################

resource "aws_route_table" "private" {

  for_each = aws_subnet.private

  vpc_id = aws_vpc.main.id

  route {

    cidr_block = "0.0.0.0/0"

    nat_gateway_id = values(aws_nat_gateway.nat)[0].id

  }

  tags = merge(

    local.common_tags,

    {

      Name = "${local.name_prefix}-${each.key}-rt"

    }

  )

}
####################################################
# Private Route Table Association
####################################################

resource "aws_route_table_association" "private" {

  for_each = aws_subnet.private

  subnet_id = each.value.id

  route_table_id = aws_route_table.private[each.key].id

}
